<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WorldGameActivity!</string>
    <string name="app_name">World Game</string>
    <string name="newgame_name">New Game</string>
    <string name="TextNewGame">New Game</string>
    <string name="TextSaveGame">Save game</string>
    <string name="TextLoadGame">Load game</string>
    <string name="TextButtonExit">Exit</string>
    <string name="tCountry">Country</string>
    <string name="tPerson">Person</string>
    <string name="tComplexity">Complexity test 123456</string>
    <string name="tCreateNewWorld">Create new world test....!</string>
</resources>